--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-
+        <h1>Mystical Adventure</h1>
+        <h2>by <span>Yuriko Mori</span></h2>
     </body>
 </html>
