Add html for page content

--- a/index.html
+++ b/index.html
@@ -9,5 +9,29 @@
     <body>
         <h1>Mystical Adventure</h1>
         <h2>by <span>Yuriko Mori</span></h2>
+        <p>Find the Dragon Balls! Look out for them all!<br>
+            You can search around the world with me.<br>
+            Gotta heed the call of magic Dragon Balls!<br>
+            What a great adventure this will be.<br>
+            You can climb on board, ’cause the Nimbus doesn’t wait!<br>
+            A fantastic journey for your dreams -- a thrilling mystery!</p>
+        <p>Through the fires of time, they’ve waited patiently.<br>
+            When all seven balls you find, the Dragon is set free.<br>
+            Rising, rising, mesmerizing, unbridled ecstasy.<br>
+            Radiant and shining, hidden somewhere in the field,<br>
+            Luminous and blinding, with your desire revealed.<br>
+            Ageless, timeless, what you’ll find is beyond belief!</p>
+        <p>Let’s try, try, try, look high and low!<br>
+            Search the sky and the sea below!<br>
+            Let’s try, try, try, seize the day,<br>
+            And make new friends along the way!</p>
+        <p>Find the Dragon Balls! Look out for them all!<br>
+            Come and hunt those Dragon Balls with me.<br>
+            Gotta heed the call of magic Dragon Balls!<br>
+            What a great adventure this will be.<br>
+            Set a course for action, adventure doesn’t wait!<br>
+            A fantastic journey for your dreams -- a thrilling mystery!</p>
+        <p> form <span>Dragon Ball Opening Theme</span>(Makafushigi Adobenchâ!,2001)</p>
+        <p>Translated by <span>Julian Grybowski</span></p>
     </body>
 </html>
