Add style for body

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             What a great adventure this will be.<br>
             Set a course for action, adventure doesn’t wait!<br>
             A fantastic journey for your dreams -- a thrilling mystery!</p>
-        <p> form <span>Dragon Ball Opening Theme</span>(Makafushigi Adobenchâ!,2001)</p>
+        <p> form <span>Dragon Ball Opening Theme</span> (Makafushigi Adobencha!, 2001)</p>
         <p>Translated by <span>Julian Grybowski</span></p>
     </body>
 </html>
