--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Mystical Adventure. Co słychać?</h1>
+        <h1>Mystical Adventure.</h1>
         <h2>by <span>Yuriko Mori</span></h2>
         <p>Find the Dragon Balls! Look out for them all!<br>
             You can search around the world with me.<br>
