--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Mystical Adventure.</h1>
-        <h2>by <span>Yuriko Mori</span></h2>
+        <h2>by <spanYuriko Mori</span></h2>
         <p>Find the Dragon Balls! Look out for them all!<br>
             You can search around the world with me.<br>
             Gotta heed the call of magic Dragon Balls!<br>
